@@ -12,23 +12,24 @@ import org.apache.commons.lang3.StringUtils;
 import org.controlsfx.control.textfield.AutoCompletionBinding;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 
 /**
- * 搜片网影视建议处理器
+ * IQiYi影视建议处理器
  *
  * @author Knifer
  */
 @Slf4j
-public class SoupianMovieSuggestionHandler implements MovieSuggestionHandler {
+public class IQiYiMovieSuggestionHandler implements MovieSuggestionHandler {
 
-    private static final String SEARCH_SUGGESTION_REQUEST_URL = "https://soupian.plus/prefix/search?wd=";
+    private static final String SEARCH_SUGGESTION_REQUEST_URL = "https://suggest.video.iqiyi.com/?if=mobile&key=";
     private static final String[] SEARCH_SUGGESTION_REQUEST_HEADERS = {
             HttpHeaders.USER_AGENT, BaseValues.USER_AGENT,
-            HttpHeaders.REFERER, "https://soupian.plus/"
+            HttpHeaders.REFERER, "https://so.iqiyi.com/",
+            HttpHeaders.ORIGIN, "https://so.iqiyi.com/"
     };
 
     @Override
@@ -38,33 +39,45 @@ public class SoupianMovieSuggestionHandler implements MovieSuggestionHandler {
         JsonObject resultJsonObj;
         JsonElement resultJsonElm;
 
-
         if (StringUtils.isBlank(userText)) {
-            return Collections.emptyList();
+
+            return List.of();
         }
         try {
-            resultBody = HttpUtil.getAsync(
-                    SEARCH_SUGGESTION_REQUEST_URL + userText, SEARCH_SUGGESTION_REQUEST_HEADERS
-            ).get(6, TimeUnit.SECONDS);
+            resultBody = HttpUtil.getAsync(SEARCH_SUGGESTION_REQUEST_URL + userText, SEARCH_SUGGESTION_REQUEST_HEADERS)
+                    .get(6, TimeUnit.SECONDS);
         } catch (TimeoutException | ExecutionException | InterruptedException e) {
             log.warn("request error", e);
 
-            return Collections.emptyList();
+            return List.of();
         }
         log.info("userText: {}, resultBody: {}", userText, resultBody);
         resultJsonObj = GsonUtil.fromJson(resultBody, JsonObject.class);
         if (resultJsonObj == null) {
-            return Collections.emptyList();
+
+            return List.of();
         }
-        resultJsonElm = resultJsonObj.get("g");
-        if (resultJsonElm == null) {
-            return Collections.emptyList();
+        resultJsonElm = resultJsonObj.get("data");
+        if (resultJsonElm == null || !resultJsonElm.isJsonArray()) {
+
+            return List.of();
         }
 
         return resultJsonElm.getAsJsonArray()
                 .asList()
                 .stream()
-                .map(JsonElement::getAsString)
+                .map(elm -> {
+                    JsonElement nameElm;
+
+                    if (!elm.isJsonObject()) {
+
+                        return null;
+                    }
+                    nameElm = elm.getAsJsonObject().get("name");
+
+                    return nameElm == null ? null : nameElm.getAsString();
+                })
+                .filter(StringUtils::isNotBlank)
                 .toList();
     }
 }
